seaqt/QtWidgets/gen_qcheckbox.h

typedef struct QActionEvent QActionEvent;
typedef struct QCheckBox QCheckBox;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QCheckBox* QCheckBox_new(QWidget* parent);
QCheckBox* QCheckBox_new2();
QCheckBox* QCheckBox_new3(struct miqt_string text);
QCheckBox* QCheckBox_new4(struct miqt_string text, QWidget* parent);
QMetaObject* QCheckBox_metaObject(const QCheckBox* self);
void* QCheckBox_metacast(QCheckBox* self, const char* param1);
struct miqt_string QCheckBox_tr(const char* s);
struct miqt_string QCheckBox_trUtf8(const char* s);
QSize* QCheckBox_sizeHint(const QCheckBox* self);
QSize* QCheckBox_minimumSizeHint(const QCheckBox* self);
void QCheckBox_setTristate(QCheckBox* self);
bool QCheckBox_isTristate(const QCheckBox* self);
int QCheckBox_checkState(const QCheckBox* self);
void QCheckBox_setCheckState(QCheckBox* self, int state);
void QCheckBox_stateChanged(QCheckBox* self, int param1);
void QCheckBox_connect_stateChanged(QCheckBox* self, intptr_t slot);
struct miqt_string QCheckBox_tr2(const char* s, const char* c);
struct miqt_string QCheckBox_tr3(const char* s, const char* c, int n);
struct miqt_string QCheckBox_trUtf82(const char* s, const char* c);
struct miqt_string QCheckBox_trUtf83(const char* s, const char* c, int n);
void QCheckBox_setTristate1(QCheckBox* self, bool y);
bool QCheckBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QCheckBox_virtualbase_sizeHint(const void* self);
bool QCheckBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QCheckBox_virtualbase_minimumSizeHint(const void* self);
bool QCheckBox_override_virtual_event(void* self, intptr_t slot);
bool QCheckBox_virtualbase_event(void* self, QEvent* e);
bool QCheckBox_override_virtual_hitButton(void* self, intptr_t slot);
bool QCheckBox_virtualbase_hitButton(const void* self, QPoint* pos);
bool QCheckBox_override_virtual_checkStateSet(void* self, intptr_t slot);
void QCheckBox_virtualbase_checkStateSet(void* self);
bool QCheckBox_override_virtual_nextCheckState(void* self, intptr_t slot);
void QCheckBox_virtualbase_nextCheckState(void* self);
bool QCheckBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QCheckBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QCheckBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_keyPressEvent(void* self, QKeyEvent* e);
bool QCheckBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* e);
bool QCheckBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QCheckBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QCheckBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_focusInEvent(void* self, QFocusEvent* e);
bool QCheckBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_focusOutEvent(void* self, QFocusEvent* e);
bool QCheckBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_changeEvent(void* self, QEvent* e);
bool QCheckBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QCheckBox_override_virtual_devType(void* self, intptr_t slot);
int QCheckBox_virtualbase_devType(const void* self);
bool QCheckBox_override_virtual_setVisible(void* self, intptr_t slot);
void QCheckBox_virtualbase_setVisible(void* self, bool visible);
bool QCheckBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QCheckBox_virtualbase_heightForWidth(const void* self, int param1);
bool QCheckBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QCheckBox_virtualbase_hasHeightForWidth(const void* self);
bool QCheckBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QCheckBox_virtualbase_paintEngine(const void* self);
bool QCheckBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QCheckBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QCheckBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_enterEvent(void* self, QEvent* event);
bool QCheckBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QCheckBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QCheckBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QCheckBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QCheckBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QCheckBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QCheckBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QCheckBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QCheckBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QCheckBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QCheckBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QCheckBox_override_virtual_showEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_showEvent(void* self, QShowEvent* event);
bool QCheckBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QCheckBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QCheckBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QCheckBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QCheckBox_override_virtual_metric(void* self, intptr_t slot);
int QCheckBox_virtualbase_metric(const void* self, int param1);
void QCheckBox_virtualbase_initPainter(const void* self, QPainter* painter);