seaqt/QtWidgets/gen_qcheckbox.nim


proc fcQCheckBox_new(parent: pointer): ptr cQCheckBox {.importc: "QCheckBox_new".}
proc fcQCheckBox_new2(): ptr cQCheckBox {.importc: "QCheckBox_new2".}
proc fcQCheckBox_new3(text: struct_miqt_string): ptr cQCheckBox {.importc: "QCheckBox_new3".}
proc fcQCheckBox_new4(text: struct_miqt_string, parent: pointer): ptr cQCheckBox {.importc: "QCheckBox_new4".}
proc fcQCheckBox_metaObject(self: pointer, ): pointer {.importc: "QCheckBox_metaObject".}
proc fcQCheckBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QCheckBox_metacast".}
proc fcQCheckBox_tr(s: cstring): struct_miqt_string {.importc: "QCheckBox_tr".}
proc fcQCheckBox_trUtf8(s: cstring): struct_miqt_string {.importc: "QCheckBox_trUtf8".}
proc fcQCheckBox_sizeHint(self: pointer, ): pointer {.importc: "QCheckBox_sizeHint".}
proc fcQCheckBox_minimumSizeHint(self: pointer, ): pointer {.importc: "QCheckBox_minimumSizeHint".}
proc fcQCheckBox_setTristate(self: pointer, ): void {.importc: "QCheckBox_setTristate".}
proc fcQCheckBox_isTristate(self: pointer, ): bool {.importc: "QCheckBox_isTristate".}
proc fcQCheckBox_checkState(self: pointer, ): cint {.importc: "QCheckBox_checkState".}
proc fcQCheckBox_setCheckState(self: pointer, state: cint): void {.importc: "QCheckBox_setCheckState".}
proc fcQCheckBox_stateChanged(self: pointer, param1: cint): void {.importc: "QCheckBox_stateChanged".}
proc fcQCheckBox_connect_stateChanged(self: pointer, slot: int) {.importc: "QCheckBox_connect_stateChanged".}
proc fcQCheckBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCheckBox_tr2".}
proc fcQCheckBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCheckBox_tr3".}
proc fcQCheckBox_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QCheckBox_trUtf82".}
proc fcQCheckBox_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCheckBox_trUtf83".}
proc fcQCheckBox_setTristate1(self: pointer, y: bool): void {.importc: "QCheckBox_setTristate1".}
proc fQCheckBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QCheckBox_virtualbase_sizeHint".}
proc fcQCheckBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_sizeHint".}
proc fQCheckBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QCheckBox_virtualbase_minimumSizeHint".}
proc fcQCheckBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_minimumSizeHint".}
proc fQCheckBox_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QCheckBox_virtualbase_event".}
proc fcQCheckBox_override_virtual_event(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_event".}
proc fQCheckBox_virtualbase_hitButton(self: pointer, pos: pointer): bool{.importc: "QCheckBox_virtualbase_hitButton".}
proc fcQCheckBox_override_virtual_hitButton(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_hitButton".}
proc fQCheckBox_virtualbase_checkStateSet(self: pointer, ): void{.importc: "QCheckBox_virtualbase_checkStateSet".}
proc fcQCheckBox_override_virtual_checkStateSet(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_checkStateSet".}
proc fQCheckBox_virtualbase_nextCheckState(self: pointer, ): void{.importc: "QCheckBox_virtualbase_nextCheckState".}
proc fcQCheckBox_override_virtual_nextCheckState(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_nextCheckState".}
proc fQCheckBox_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QCheckBox_virtualbase_paintEvent".}
proc fcQCheckBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_paintEvent".}
proc fQCheckBox_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QCheckBox_virtualbase_mouseMoveEvent".}
proc fcQCheckBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_mouseMoveEvent".}
proc fQCheckBox_virtualbase_keyPressEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_keyPressEvent".}
proc fcQCheckBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_keyPressEvent".}
proc fQCheckBox_virtualbase_keyReleaseEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_keyReleaseEvent".}
proc fcQCheckBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_keyReleaseEvent".}
proc fQCheckBox_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_mousePressEvent".}
proc fcQCheckBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_mousePressEvent".}
proc fQCheckBox_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_mouseReleaseEvent".}
proc fcQCheckBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_mouseReleaseEvent".}
proc fQCheckBox_virtualbase_focusInEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_focusInEvent".}
proc fcQCheckBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_focusInEvent".}
proc fQCheckBox_virtualbase_focusOutEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_focusOutEvent".}
proc fcQCheckBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_focusOutEvent".}
proc fQCheckBox_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_changeEvent".}
proc fcQCheckBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_changeEvent".}
proc fQCheckBox_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QCheckBox_virtualbase_timerEvent".}
proc fcQCheckBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_timerEvent".}
proc fQCheckBox_virtualbase_devType(self: pointer, ): cint{.importc: "QCheckBox_virtualbase_devType".}
proc fcQCheckBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_devType".}
proc fQCheckBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QCheckBox_virtualbase_setVisible".}
proc fcQCheckBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_setVisible".}
proc fQCheckBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QCheckBox_virtualbase_heightForWidth".}
proc fcQCheckBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_heightForWidth".}
proc fQCheckBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QCheckBox_virtualbase_hasHeightForWidth".}
proc fcQCheckBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_hasHeightForWidth".}
proc fQCheckBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QCheckBox_virtualbase_paintEngine".}
proc fcQCheckBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_paintEngine".}
proc fQCheckBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_mouseDoubleClickEvent".}
proc fcQCheckBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_mouseDoubleClickEvent".}
proc fQCheckBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_wheelEvent".}
proc fcQCheckBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_wheelEvent".}
proc fQCheckBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_enterEvent".}
proc fcQCheckBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_enterEvent".}
proc fQCheckBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_leaveEvent".}
proc fcQCheckBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_leaveEvent".}
proc fQCheckBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_moveEvent".}
proc fcQCheckBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_moveEvent".}
proc fQCheckBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_resizeEvent".}
proc fcQCheckBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_resizeEvent".}
proc fQCheckBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_closeEvent".}
proc fcQCheckBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_closeEvent".}
proc fQCheckBox_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_contextMenuEvent".}
proc fcQCheckBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_contextMenuEvent".}
proc fQCheckBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_tabletEvent".}
proc fcQCheckBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_tabletEvent".}
proc fQCheckBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_actionEvent".}
proc fcQCheckBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_actionEvent".}
proc fQCheckBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_dragEnterEvent".}
proc fcQCheckBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_dragEnterEvent".}
proc fQCheckBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_dragMoveEvent".}
proc fcQCheckBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_dragMoveEvent".}
proc fQCheckBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_dragLeaveEvent".}
proc fcQCheckBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_dragLeaveEvent".}
proc fQCheckBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_dropEvent".}
proc fcQCheckBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_dropEvent".}
proc fQCheckBox_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_showEvent".}
proc fcQCheckBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_showEvent".}
proc fQCheckBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QCheckBox_virtualbase_hideEvent".}
proc fcQCheckBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_hideEvent".}
proc fQCheckBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QCheckBox_virtualbase_nativeEvent".}
proc fcQCheckBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_nativeEvent".}
proc fQCheckBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QCheckBox_virtualbase_metric".}
proc fcQCheckBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QCheckBox_override_virtual_metric".}
proc fQCheckBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QCheckBox_virtualbase_initPainter".}
